--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "strict": true,
-    "removeComments": true,
     "module": "commonjs",
     "target": "ES5",
     "outDir": "dist",
     "rootDir": "src"
-  }
+  },
+  "exclude": ["examples"]
 }
