--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "build:watch": "tsc -w"
   },
   "dependencies": {
+    "debug": "^4.2.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
     "@types/node-fetch": "^2.5.7",
+    "@types/debug": "^4.1.5",
     "typescript": "^4.0.3"
   }
 }
