--- a/package.json
+++ b/package.json
@@ -32,16 +32,21 @@
   },
   "scripts": {
     "build": "tsc",
-    "build:watch": "tsc -w"
+    "build:watch": "tsc -w",
+    "test": "jest"
   },
   "dependencies": {
     "debug": "^4.2.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.11.2",
     "@types/node-fetch": "^2.5.7",
-    "@types/debug": "^4.1.5",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.3"
   }
 }
