--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "module": "commonjs",
-    "target": "ES5",
-    "outDir": "dist",
-    "rootDir": "src",
-    "declaration": true
+    "target": "ES2019",
+    "module": "CommonJS",
+    "declaration": true,
+    "skipLibCheck": true,
+    "outDir": "./dist",
+    "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "strict": true
   },
-  "exclude": ["examples"]
+  "exclude": ["node_modules"],
+  "include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
