--- a/package.json
+++ b/package.json
@@ -36,17 +36,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "debug": "^4.3.1",
-    "node-fetch": "^2.6.1"
+    "debug": "^4.3.3",
+    "node-fetch": "^2.6.6"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.5",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
+    "@types/debug": "^4.1.7",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.0.0",
     "@types/node-fetch": "^2.5.8",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "jest": "^27.4.5",
+    "prettier": "^2.5.1",
+    "standard-version": "^9.3.2",
+    "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
