--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-node_modules
+# build files
 dist
-.wakatime*
+
+# dependencies
+node_modules
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
