--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,16 +5,15 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main]
-  schedule:
-    - cron: '0 0 * * *'
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        node-version: [14.x]
+        os: [ubuntu-latest]
+        node-version: [16.x]
 
     steps:
       - name: Check out repository
@@ -25,8 +24,17 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Cache dependencies
+        id: yarn-cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            node_modules
+            .yarn/cache
+          key: ${{ matrix.os }}-node-v${{ matrix.node-version }}-yarn-${{ hashFiles('yarn.lock') }}
+
       - name: Install dependencies
-        run: yarn --frozen-lockfile
+        run: yarn --immutable
 
       - name: Run tests
         run: yarn test
