--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.0.0",
-    "@types/node-fetch": "^2.5.8",
-    "jest": "^27.4.5",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.x.x",
+    "@types/node-fetch": "^2.6.1",
+    "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
-    "ts-jest": "^27.1.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   },
   "packageManager": "yarn@3.2.0"
 }
